test/apps/errors/src/routes/_trace.js
export function oops() {
	throw new Error('oops');
}
